<resources>
	<string name="app_name">泰心康护</string>
	<string name="welcome_activity_name">泰心康护</string>
	<string name="hello_world">Hello world!</string>
	<string name="action_settings">Settings</string>
	<string name="title_activity_main">MainActivity</string>
	<string name="main_home_tab_text">首页</string>
	<string name="main_personal_tab_text">我的</string>
	<string name="main_service_tab_text">服务</string>
	<string name="main_compant_tab_text">泰心</string>
	<string name="main_func_text">泰心康护是衣架专注于康复护理产业资源整合的服务性公司。泰心昂胡在大健康产品迅猛发展，医改大变革的背景下，对专家团队，培训机构，研发企业，生产企业，销售队伍，护理团队...</string>
	<string name="main_persional_popmenu_nursing_order_name">陪护订单</string>
	<string name="main_persional_popmenu_shopping_order_name">产品订单</string>
	<string name="main_persional_popmenu_wealth_name">我的财富</string>
	<string name="main_persional_popmenu_setting_name">我的设置</string>
	<string name="owner_choose_nurse">预约陪护</string>
	<string name="about_us_title">泰心康护</string>
	<string name="service_title">泰心服务</string>
	<string name="faq_title">常见问题</string>
	<string name="agreement_title">用户协议</string>
	<string name="worker_level_title">护理员级别</string>
	<string name="my_wealth_title">我的财富</string>
	<string name="my_setting_title">我的设置</string>
	<string name="my_sorce_title">我的积分</string>
	<string name="question_feed_back_title">问题反馈</string>
	<string name="login_title">用户注册</string>
	<string name="nurs_order_title">陪护订单</string>
	<string name="nurs_order_info_title">陪护订单</string>
	<string name="nurs_order_reviews_title">评价</string>
	<string name="shopping_title">康复辅助用品</string>
	<string name="goods_info_title">商品详细信息</string>
	<string name="company_show_title">优惠信息</string>
	<string name="appointment_nursing_title">预约陪护</string>
	<string name="nursing_order_pay_title">订单支付</string>
	<string name="shopping_car_title">购物车</string>
	<string name="shopping_order_confirm_title">确认订单</string>
	<string name="nurs_order_change_title">订单变更</string>
	<string name="address_management_title">地址管理</string>
	<string name="new_address_title">新建地址</string>
	<string name="worker_evaluate_title">服务评价</string>
	<string name="content_male">男</string>
	<string name="content_female">女</string>
	<string name="content_care_myself">可自理</string>
	<string name="content_half_care_myself">半自理</string>
	<string name="content_not_care_myself">不能自理</string>
	<string name="content_main_page">首页</string>
	<string name="content_yuan_per_day">元/天</string>
	<string name="content_self_intro">自我介绍：</string>
	<string name="content_service_content">服务内容：</string>
	<string name="content_day">天</string>
	<string name="content_yuan">元</string>
	<string name="content_age">岁</string>
	<string name="content_confirm">确定</string>
	<string name="content_patient_info">患者信息</string>
	<string name="nurse_order_status_wait_payment">待支付</string>
	<string name="nurse_order_status_wait_service">待服务</string>
	<string name="nurse_order_status_in_service">服务中</string>
	<string name="nurse_order_status_finished">已完成</string>
	<string name="nurse_order_status_canceled">已取消</string>
	<string name="nurse_order_status_wait_evaluation">待评价</string>
	<string name="title_register">注册页面</string>
	<string name="title_select_date">选择陪护时间</string>
	<string name="char_total">共</string>
	<string name="char_day">天</string>
	<string name="content_all">全部</string>
	<string name="hospital_content_tips">请选择医院</string>
	<string name="hospital_more_content_tips">更多医院敬请期待</string>
	<string name="department_content_tips">请选择科室</string>
	<string name="department_more_content_tips">更多科室敬请期待</string>
	<string name="content_sure">确认</string>
	<string name="title_setting">我的设置</string>
	<string name="tips_logout">您还未登录哦~</string>
	<string name="login">登录</string>
	<string name="logout">退出登录</string>
	<string name="tips_loginout">是否确定退出登录?</string>
	<string name="info_i_known">知道了</string>
	<string name="info_register_success">成功</string>
	<string name="info_determine">确定</string>
	<string name="info_cancel">取消</string>
	<string name="err_info_invalid_phone">请输入有效的手机号码</string>
	<string name="err_info_no_init_sms">SmsAutho未初始化</string>
	<string name="err_info_invalid_country_zip_code">当前国家不支持手机验证服务</string>
	<string name="err_info_fill_required_options">请填写必填选项</string>
	<string name="err_info_json_serilization">json序列化错误</string>
	<string name="err_info_deserialization_failed">反序列化失败</string>
	<string name="err_info_http_status">http status:</string>
	<string name="err_info_sms_status">http sms:</string>
	<string name="err_info_sms_access_permission_refuse">服务器拒绝访问，或者拒绝操作</string>
	<string name="err_info_sms_appkey_invalid">求Appkey不存在或被禁用。</string>
	<string name="err_info_sms_permission_invalid">权限不足</string>
	<string name="err_info_sms_server_error">服务器内部错误</string>
	<string name="err_info_sms_param_invalid">缺少必要的请求参数</string>
	<string name="err_info_sms_phone_format_invalid">请求中用户的手机号格式不正确（包括手机的区号）</string>
	<string name="err_info_sms_auth_code_num_max">请求发送验证码次数超出限制</string>
	<string name="err_info_sms_auth_code_invalid">无效验证码。</string>
	<string name="err_info_sms_credit_low">余额不足</string>
	<string name="protocol_text">点击注册表示已阅读并同意</string>
	<string name="company_show_red_text">红色标题信息</string>
	<string name="company_black_text">黑色标题信息</string>
	<string name="company_show_content_text">内容信息</string>
	<string name="service_phone_number">4009696218</string>
	<string name="call">拨打</string>
	<string name="call_phone">拨打电话</string>
	<string name="cancel">取消</string>
	<string name="three_star_worker_explain">由具有0~6个月护理员工作经验，通过专业考核并取得初级护理员证书的初级护理员提供的陪护服务。\n服务内容\n负责患者基本的日常的生活的护理：协助患者进食、进水、进药、入厕、入睡；\n保持患者床单位干燥整洁无杂物；\n定时开窗通风；\n保持患者身体清洁卫生（剪指甲、剃胡须、洗头）；\n帮助患者打饭及陪患者散步；\n协助患者购物；\n看护患者输液；\n陪同患者做检查；\n熟练使用轮椅、平车</string>
	<string name="four_star_worker_explain">由具有6个月以上护理员工作经验，通过专业考核并取得中级护理员证书且好评率在95%以上的中级护理员提供的陪护服务。\n服务内容\n包括初级护理的所有服务内容；\n帮助患者翻身、扣背，防止患者身体长褥疮；\n观察患者病情变化（观察监护仪变化）；\n记录患者的出入量（入食和排便）；\n保持各种医疗管路畅通；\n在医护人员的指导下熟练掌握各种医疗辅具；</string>
	<string name="five_star_worker_explain">由具有4年以上护理员工作经验，年龄在30~50岁之间，中学以上文化程度，通过专业考核并取得高级护理员证书，沟通能力良好且好评率在98%以上的高级护理员提供的陪护服务。\n服务内容\n包括中级护理的所有服务内容；\n懂得ICU及危重、特殊病人的看护；\n协助患者进行简单康复锻炼；\n陪同患者读书、聊天或进行一些娱乐活动；</string>
	<string name="six_star_worker_explain">由具有6年以上护理员工作经验，年龄在30~50岁之间，中学以上文化程度，通过专业考核并取得特级护理员证书，沟通能力强且好评率100%的特级护理员提供的陪护服务。\n服务内容\n包括高级护理的所有服务内容；\n安抚病人情绪、为病人做心理辅导；</string>
	<string name="apponintment_page_hint_text">请填写以下信息\n我们将根据您的实际情况为您匹配相应的护理员</string>
	<string name="protocol_confirm_text">点击确认表示已阅读并同意</string>
	<string name="confirm_btn_text">确认</string>
	<string name="name_text">姓名：</string>
	<string name="name_hint_text">点击填写患者姓名</string>
	<string name="btn_age_section_0_15_text">0岁至15岁</string>
	<string name="btn_age_section_16_35_text">16岁至35岁</string>
	<string name="btn_age_section_36_55_text">36岁至55岁</string>
	<string name="btn_age_section_56_75_text">55岁至75岁</string>
	<string name="btn_age_section_above_75_text">75岁以上</string>
	<string name="btn_weight_section_0_35_text">0kg至35kg</string>
	<string name="btn_weight_section_35_50_text">35kg至50kg</string>
	<string name="btn_weight_section_50_80_text">50kg至80kg</string>
	<string name="btn_weight_section_80_120_text">80kg至120kg</string>
	<string name="btn_weight_section_above_120_text">120kg以上</string>
	<string name="btn_state_care_myself_text">可自理</string>
	<string name="btn_state_half_care_myself_text">半自理</string>
	<string name="btn_state_not_care_myself_text">不能自理</string>
	<string name="evaluation_text">评价</string>
	<string name="continue_text">续订</string>
	<string name="replacement_text">更换</string>
	<string name="unsubscribe_text">退订</string>
	<string name="fill_post_text">补差价</string>
	<string name="order_status_text">订单状态：</string>
	<string name="order_id_text">订单编号：</string>
	<string name="order_id_data_text">201506172716104</string>
	<string name="cancelled_text">已取消</string>
	<string name="unpaid_text">未付款</string>
	<string name="services_text">服务中</string>
	<string name="completed_text">已完成</string>
	<string name="start_date_text">开始日期</string>
	<string name="to_text">至</string>
	<string name="end_date_text">结束日期</string>
	<string name="nursing_service_text">陪护服务</string>
	<string name="day_text">天</string>
	<string name="number_of_days_text">天数</string>
	<string name="unit_price_text">单价</string>
	<string name="yuan_text">元</string>
	<string name="multiplication_sign_text">x</string>
	<string name="total_text">合计：</string>
	<string name="order_content_text">订单内容</string>
	<string name="nursing_worker_text">护理员:</string>
	<string name="job_number_text">工号：</string>
	<string name="worker_level_text">级别：</string>
	<string name="job_id_text">job_number</string>
	<string name="service_time_text">服务时间:</string>
	<string name="service_time_datda_text">6月24日 - 6月26日 共3天</string>
	<string name="service_location_text">服务地点:</string>
	<string name="service_location_data_text">北京朝阳医院心血管内科</string>
	<string name="patient_text">被护理人:</string>
	<string name="patient_data_text">王某人</string>
	<string name="patient_state_text">被护理人状态：</string>
	<string name="order_amount_text">订单金额</string>
	<string name="service_type_all_text">全天24小时陪护服务：</string>
	<string name="service_type_day_text">白天12小时陪护服务：</string>
	<string name="service_type_night_text">夜间12小时陪护服务：</string>
	<string name="service_type_price_text">200元 × 1</string>
	<string name="insurance_text">保险(暂无)</string>
	<string name="insurance_price_text">+0元</string>
	<string name="total_price_text">200元</string>
	<string name="user_protocol_text">用户协议</string>
	<string name="click_ok_text">点击确定预约表示已阅读并同意</string>
	<string name="determine_appointment_text">确定预约</string>
	<string name="determine_pay_title">确认支付</string>
	<string name="determine_order_title">确认订单</string>
	<string name="change_content_text">变更内容</string>
	<string name="change_item_text">变更项</string>
	<string name="change_amount_text">变更金额</string>
	<string name="change_money_text">差价金额：</string>
	<string name="write_change_amount_text">请输入差价金额</string>
	<string name="patient_status_change_text">患者状态变更</string>
	<string name="service_price_text">服务价格</string>
	<string name="basic_information_text">基础信息</string>
	<string name="pay_the_way_text">支付方式</string>
	<string name="need_pay_text">需支付</string>
	<string name="cash_pay_text">现金支付</string>
	<string name="cash_pay_hint_text">提交成功后，工作人员会上门收取现金</string>
	<string name="ali_pay_text">支付宝支付</string>
	<string name="ali_pay_hint_text">推荐有支付宝账号的用户使用</string>
	<string name="weixin_pay_text">微信支付</string>
	<string name="weixin_pay_hint_text">推荐安装微信5.0版本以上的用户使用</string>
	<string name="select_nurse_title">选择护理员</string>
	<string name="select_nurse_tips">以下护理员均为根据您的信息精细化匹配生成</string>
	<string name="nurse_info">护理员信息</string>
	<string name="function_is_not_open">功能未开放</string>
	<string name="nurse_junior">三星护理员</string>
	<string name="intermediates_junior">四星护理员</string>
	<string name="senior_junior">五星护理员</string>
	<string name="item_name_title">思维 束腰带 X-002 透气护 腰肌劳损腰间盘突出辅助康复内赠磁垫</string>
	<string name="currency_symbol">￥</string>
	<string name="item_price">39.00</string>
	<string name="item_evaluation_prefix">好评</string>
	<string name="item_evaluation">91</string>
	<string name="item_evaluation_suffix">%</string>
	<string name="item_evaluation_times">11</string>
	<string name="item_evaluation_times_suffix">人</string>
	<string name="receive_volume_info">满100减10</string>
	<string name="postage_text">运费</string>
	<string name="postage_price">免运费</string>
	<string name="hint_content">72小时闪电发货	七天无理由退换货物</string>
	<string name="comment_text">评论</string>
	<string name="goto_mian_btn_text">首页</string>
	<string name="up_pull_btn_text">上拉查看图文详情</string>
	<string name="phone_number_data_text">15********6</string>
	<string name="address_data_text">北京市西城区牛街西里二区11号楼1506</string>
	<string name="total_commodity_text">商品总额</string>
	<string name="real_payment_text">实付款：</string>
	<string name="single_time_text">下单时间：</string>
	<string name="single_time_date_data_text">2015-06-29</string>
	<string name="single_time_time_data_text">08:59:41</string>
</resources>