<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:background="@color/main_bg_color"
			  android:orientation="vertical">

	<include
		android:id="@+id/title"
		layout="@layout/include_header"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="40dp"
		android:gravity="center_vertical"
		android:paddingLeft="15dp"
		android:paddingRight="15dp"
		android:text="@string/change_item_text"
		android:textColor="@color/text_color_gray"
		android:textSize="14.0sp"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="40dp"
		android:background="@color/white">

		<RadioButton
			android:layout_width="match_parent"
			android:layout_height="40dp"
			android:layout_marginLeft="15dp"
			android:checked="true"
			android:text="@string/patient_status_change_text"
			android:textSize="16.0sp"/>

	</LinearLayout>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="40dp"
		android:gravity="center_vertical"
		android:paddingLeft="15dp"
		android:paddingRight="15dp"
		android:text="@string/change_content_text"
		android:textColor="@color/text_color_gray"
		android:textSize="14.0sp"/>

	<RadioGroup
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/white">

		<RadioButton
			android:layout_width="match_parent"
			android:layout_height="40dp"
			android:layout_marginLeft="15dp"
			android:text="@string/btn_state_care_myself_text"
			android:textSize="16.0sp"/>

		<RadioButton
			android:layout_width="match_parent"
			android:layout_height="40dp"
			android:layout_marginLeft="15dp"
			android:text="@string/btn_state_half_care_myself_text"
			android:textSize="16.0sp"/>

		<RadioButton
			android:layout_width="match_parent"
			android:layout_height="40dp"
			android:layout_marginLeft="15dp"
			android:text="@string/btn_state_not_care_myself_text"
			android:textSize="16.0sp"/>

	</RadioGroup>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="40dp"
		android:gravity="center_vertical"
		android:paddingLeft="15dp"
		android:paddingRight="15dp"
		android:text="@string/change_amount_text"
		android:textColor="@color/text_color_gray"
		android:textSize="14.0sp"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/white">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="40dp"
			android:gravity="center_vertical"
			android:layout_marginLeft="15dp"
			android:text="@string/change_money_text"
			android:textSize="14.0sp"/>

		<EditText
			android:layout_width="wrap_content"
			android:layout_height="40dp"
			android:gravity="center_vertical"
			android:layout_marginRight="15dp"
			android:layout_weight="1"
			android:hint="@string/write_change_amount_text"
			android:textSize="14.0sp"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_weight="1">

	</LinearLayout>

	<include
		android:id="@+id/bottom"
		layout="@layout/include_bottom_btn"/>

</LinearLayout>