<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="match_parent"
			  android:layout_height="100dp"
			  android:orientation="horizontal">

	<ImageView
		android:id="@+id/goods_img"
		android:layout_width="100dp"
		android:layout_height="100dp"
		android:layout_marginBottom="5dp"
		android:layout_marginLeft="15dp"
		android:layout_marginRight="5dp"
		android:layout_marginTop="5dp"
		android:src="@drawable/item_face_1"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginBottom="5dp"
		android:layout_marginLeft="5dp"
		android:layout_marginRight="15dp"
		android:layout_marginTop="5dp"
		android:layout_weight="1"
		android:orientation="vertical"
		android:weightSum="1">

		<TextView
			android:id="@+id/goods_name_title"
			android:layout_width="wrap_content"
			android:layout_height="48dp"
			android:text="@string/item_name_title"
			android:textSize="12sp"
			/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/currency_symbol"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/currency_symbol"
				android:textColor="@color/text_color_orange"
				android:textSize="18sp"/>

			<TextView
				android:id="@+id/goods_price"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/item_price"
				android:textColor="@color/text_color_orange"
				android:textSize="18sp"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/item_evaluation_prefix"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/item_evaluation_prefix"
				android:textSize="12sp"/>

			<TextView
				android:id="@+id/goods_praise_rate"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/item_evaluation"
				android:textSize="12sp"/>

			<TextView
				android:id="@+id/item_evaluation_suffix"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="25dp"
				android:text="@string/item_evaluation_suffix"
				android:textSize="12sp"/>

			<TextView
				android:id="@+id/goods_evaluation_times"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/item_evaluation_times"
				android:textSize="12sp"/>

			<TextView
				android:id="@+id/item_evaluation_times_suffix"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/item_evaluation_times_suffix"
				android:textSize="12sp"/>

		</LinearLayout>
	</LinearLayout>
</LinearLayout>