<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="match_parent"
			  android:layout_height="wrap_content"
			  android:orientation="vertical">

	<ImageView
		android:id="@+id/goods_face_big"
		android:layout_width="match_parent"
		android:layout_height="300dp"
		android:src="@drawable/goods_face_big"/>

	<include
		android:id="@+id/dividing_line"
		layout="@layout/item_dividing_line_horizontal"/>

	<TextView
		android:id="@+id/goods_name_func_text"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="5dp"
		android:layout_marginLeft="15dp"
		android:layout_marginRight="15dp"
		android:layout_marginTop="5dp"
		android:text="@string/item_name_title"/>

	<include
		android:id="@+id/dividing_line"
		layout="@layout/item_dividing_line_horizontal"/>

	<LinearLayout
		android:id="@+id/price_region"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="5dp"
		android:layout_marginLeft="15dp"
		android:layout_marginRight="15dp"
		android:layout_marginTop="5dp"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/currency_symbol"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/currency_symbol"
			android:textColor="@color/text_color_orange"
			android:textSize="20sp"/>

		<TextView
			android:id="@+id/goods_price"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="0"
			android:textColor="@color/text_color_orange"
			android:textSize="20sp"/>

	</LinearLayout>

	<include
		android:id="@+id/dividing_line"
		layout="@layout/item_dividing_line_horizontal"/>

	<LinearLayout
		android:id="@+id/receive_volume_region"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="5dp"
		android:layout_marginLeft="15dp"
		android:layout_marginRight="15dp"
		android:layout_marginTop="5dp"
		android:orientation="horizontal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

		<TextView
			android:id="@+id/receive_volume_info"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="15dp"
			android:background="@drawable/bg_order_rb"
			android:text="@string/receive_volume_info"/>

		<TextView
			android:id="@+id/receive_volume_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="right"
			android:text=">"/>

	</LinearLayout>

	<include
		android:id="@+id/dividing_line"
		layout="@layout/item_dividing_line_horizontal"/>

	<LinearLayout
		android:id="@+id/postage_region"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="5dp"
		android:layout_marginLeft="15dp"
		android:layout_marginRight="15dp"
		android:layout_marginTop="5dp"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/postage_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/postage_text"/>

		<TextView
			android:id="@+id/postage_price"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/postage_price"/>

	</LinearLayout>

	<include
		android:id="@+id/dividing_line"
		layout="@layout/item_dividing_line_horizontal"/>

	<LinearLayout
		android:id="@+id/hint_region"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="5dp"
		android:layout_marginLeft="15dp"
		android:layout_marginRight="15dp"
		android:layout_marginTop="5dp"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/hint_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/postage_text"/>

		<TextView
			android:id="@+id/hint_content"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/hint_content"/>

	</LinearLayout>

	<include
		android:id="@+id/dividing_line"
		layout="@layout/item_dividing_line_horizontal"/>

	<LinearLayout
		android:id="@+id/comment_region"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="5dp"
		android:layout_marginLeft="15dp"
		android:layout_marginRight="15dp"
		android:layout_marginTop="5dp"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/comment_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/comment_text"/>

		<TextView
			android:id="@+id/item_evaluation_prefix"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="right"
			android:text="@string/item_evaluation_prefix"/>

		<TextView
			android:id="@+id/goods_praise_rate"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/item_evaluation"/>

		<TextView
			android:id="@+id/item_evaluation_suffix"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="25dp"
			android:text="@string/item_evaluation_suffix"/>

		<TextView
			android:id="@+id/goods_evaluation_times"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/item_evaluation_times"/>

		<TextView
			android:id="@+id/item_evaluation_times_suffix"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="25dp"
			android:text="@string/item_evaluation_times_suffix"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text=">"/>

	</LinearLayout>

	<include
		android:id="@+id/dividing_line"
		layout="@layout/item_dividing_line_horizontal"/>

	<include layout="@layout/item_goods_comment"/>

	<include layout="@layout/item_goods_comment"/>

	<include layout="@layout/item_goods_comment"/>

	<include
		android:id="@+id/dividing_line"
		layout="@layout/item_dividing_line_horizontal"/>


	<LinearLayout
		android:id="@+id/up_pull_btn_region"
		android:layout_width="wrap_content"
		android:layout_height="48dp"
		android:layout_gravity="center_horizontal"
		android:background="@color/white"
		android:orientation="horizontal">

		<ImageView
			android:id="@+id/up_pull_btn_img"
			android:layout_width="20dp"
			android:layout_height="20dp"
			android:layout_gravity="center_vertical"
			android:src="@mipmap/img_up"/>

		<TextView
			android:id="@+id/up_pull_btn_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:text="@string/up_pull_btn_text"/>

	</LinearLayout>

</LinearLayout>